--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,7 @@ deploy:
     type: git
     repository: 
       github:
+        # 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@github.com:Jianliang-Shen/sjl3110.github.io.git
         git@github.com:Jianliang-Shen/sjl3110.github.io.git
     branch: master
     
