--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -380,9 +380,9 @@ about:  # 关于页需要手动创建，具体请见：https://hexo.fluid-dev.co
   banner_img: /img/default_flight.jpeg
   banner_img_height: 60  # available: 0 - 100
   banner_mask_alpha: 0.3  # available: 0 - 1.0
-  subtitle:  # 打字机内容
-  avatar: /img/avatar.png # 头像
-  name: 沈建谅
+  subtitle: 简历
+  avatar: /img/person.jpg # 头像
+  name: Jianliang Shen
   introduce: '嵌入式开发/软件开发' # 支持 HTML
   icons: # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，class 代表图标的 css class
     - { class: 'iconfont icon-github-fill', link: 'https://github.com/sjl3110', tip: 'GitHub' }
