--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "5.4.0"
+    "version": "4.2.1"
   },
   "dependencies": {
     "bulma-stylus": "^0.8.0",
@@ -33,6 +33,9 @@
     "hexo-util": "^1.8.0",
     "inferno": "^7.3.3",
     "inferno-create-element": "^7.3.3",
+    "live2d-widget-model-epsilon2_1": "^1.0.5",
+    "live2d-widget-model-hijiki": "^1.0.5",
+    "live2d-widget-model-tororo": "^1.0.5",
     "live2d-widget-model-wanko": "^1.0.5",
     "tar": "^4.4.10",
     "wget": "0.0.1"
